# xorg__driver__xf86-video-glide

./: .gitignore  COPYING  Makefile.am  configure.ac
man/: .gitignore  Makefile.am  glide.man
src/: Makefile.am  glide_driver.c
